rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__simple_rename_focused_ok_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                ┌Rename────────────────────────────────────────┐                ",
        "                │  New name:                                   │                ",
        "                │  file.rs                                     │                ",
        "                │  (Enter to confirm, Esc to cancel)           │                ",
        "                │                                              │                ",
        "                │               [*OK*]  [Cancel]               │                ",
        "                └──────────────────────────────────────────────┘                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 23, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 10, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 63, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 13, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 38, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
